--- a/frontend/src/styles/_mediaQueries.scss
+++ b/frontend/src/styles/_mediaQueries.scss
@@ -56,7 +56,7 @@
           margin: auto !important;
           // border: solid 2px green;
           order: 2;
-          max-width: 20em !important;
+          width: 20em !important;
           img {
             width: 20em !important;
           }
