--- a/frontend/src/styles/_mediaQueries.scss
+++ b/frontend/src/styles/_mediaQueries.scss
@@ -36,8 +36,7 @@
       flex: 100% !important;
     }
   }
-  .eventsDiv {
-    
+  .eventsDiv {    
     .eventsList {
       li {
         // border: solid 2px aqua;
@@ -69,5 +68,29 @@
         }
       }
     }
+  }
+  #joinedItem {
+    display: flex;
+    flex-direction: column;
+    #underTheTitle {
+      display: flex;
+    flex-direction: column !important;
+    align-items: center !important;
+    gap: 0.5em !important;
+      #joinedThumbnail {
+        width: 15em !important;
+      }
+      #joinedDescription {
+        margin-left: 0 !important;
+        flex-grow: 0 !important;
+        margin-bottom: 1.5em;
+        #joinedBtns {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-end;
+          gap: .5em;
+        }
+      }
+    } 
   }
 }
