--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -61,6 +61,30 @@
     order: 3;
     max-width: 20em !important;
   }
+  #joinedItem {
+    display: flex;
+    flex-direction: column;
+  }
+  #joinedItem #underTheTitle {
+    display: flex;
+    flex-direction: column !important;
+    align-items: center !important;
+    gap: 0.5em !important;
+  }
+  #joinedItem #underTheTitle #joinedThumbnail {
+    width: 15em !important;
+  }
+  #joinedItem #underTheTitle #joinedDescription {
+    margin-left: 0 !important;
+    flex-grow: 0 !important;
+    margin-bottom: 1.5em;
+  }
+  #joinedItem #underTheTitle #joinedDescription #joinedBtns {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 0.5em;
+  }
 }
 .userProfileDiv {
   display: flex;
