event page suggestion

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -16,6 +16,7 @@ $dark: #352e28;
 @import "./eventsLists";
 @import "./homePage";
 @import "./categoriesSubPage";
+@import "./singleEvent";
 
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
 @import "../../node_modules/bootstrap/scss/bootstrap";
