--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -312,6 +312,65 @@
   aspect-ratio: 1;
 }
 
+#singeEventCardHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 2em;
+  padding: 1em;
+}
+#singeEventCardHeader #cardHeader {
+  display: flex;
+  flex-direction: column;
+}
+#singeEventCardHeader #cardHeader #eventTitleWBadge {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 0.75em;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+}
+#singeEventCardHeader #cardHeader #eventDescSubt {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  gap: 0.4em;
+  margin-bottom: 0.7em;
+  margin-left: 0.4em;
+}
+#singeEventCardHeader #cardHeader #eventDescSubt p {
+  margin: 0;
+  padding: 0;
+}
+#singeEventCardHeader #singleEventThumbnail {
+  margin-left: auto;
+}
+#singeEventCardHeader #singleEventThumbnail img {
+  width: 10em;
+}
+
+#eventDesc {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  align-items: flex-start;
+  margin-top: 0.5em;
+}
+#eventDesc h6, #eventDesc .h6 {
+  margin-top: 0.5em;
+}
+
+#actualDesc {
+  border: solid 1px #a5b2ab;
+  border-radius: 1em;
+  padding: 1.5em;
+  margin-top: 2em;
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-bottom: 1em;
+}
+
 /*!
  * Bootstrap  v5.2.3 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
