--- a/frontend/src/styles/_singleEvent.scss
+++ b/frontend/src/styles/_singleEvent.scss
@@ -16,12 +16,12 @@
       margin-bottom: 1em;
     }
     #eventDescSubt {
-        display: flex;
-        flex-direction: column;
-        align-items: baseline;
-        gap: 0.4em;
-        margin-bottom: 0.7em;
-        margin-left: 0.4em;
+      display: flex;
+      flex-direction: column;
+      align-items: baseline;
+      gap: 0.4em;
+      margin-bottom: 0.7em;
+      margin-left: 0.4em;
       p {
         margin: 0;
         padding: 0;
@@ -37,24 +37,28 @@
 }
 
 #eventDesc {
-    display: flex;
-    flex-direction: row;
-    gap: 1em;
-    align-items: flex-start; 
-    margin-top: .5em;   
-    h6 {
-        margin-top: 0.5em;
-        
-    }
-    
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  align-items: flex-start;
+  margin-top: 0.5em;
+  h6 {
+    margin-top: 0.5em;
+  }
 }
 #actualDesc {
-    border: solid 1px $primary;
-    border-radius: 1em;
-   padding: 1.5em;
-   margin-top: 2em;
-   margin-left: 2em;
-   margin-right: 2em;
-   margin-bottom: 1em;
-    
+  border: solid 1px $primary;
+  border-radius: 1em;
+  padding: 1.5em;
+  margin-top: 2em;
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-bottom: 1em;
+}
+#eventDescBtns {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+  justify-content: flex-end;
+  padding-right: 1em;
 }
