--- a/frontend/src/styles/_mediaQueries.scss
+++ b/frontend/src/styles/_mediaQueries.scss
@@ -93,4 +93,12 @@
       }
     } 
   }
+
+  #singleEventThumbnail {
+    display: none;
+    margin-left: auto;
+    img {
+      width: 10em;
+    }
+  }
 }
