--- a/frontend/src/styles/_homePage.scss
+++ b/frontend/src/styles/_homePage.scss
@@ -32,4 +32,17 @@
     .card-events-list {
       padding: 0;
     }
+    .teamCard {      
+      margin-bottom: 0.75em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      p {
+      margin: 0;      
+      }
+      a {
+        text-decoration: none;
+        color: $secondary;
+      }
+    }
   }
