--- a/frontend/src/styles/_userProfile.scss
+++ b/frontend/src/styles/_userProfile.scss
@@ -23,11 +23,18 @@
 #joinedItem {
   display: flex;
   flex-direction: column;
+  #createdEventTitle {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+     align-items: flex-start;
+  justify-content: flex-start;
+  }
   #underTheTitle {
     display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 2em;
+  gap: 2em; 
     #joinedThumbnail {
       width: 10em;
     }
