--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -120,6 +120,13 @@
   display: flex;
   flex-direction: column;
 }
+#joinedItem #createdEventTitle {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
 #joinedItem #underTheTitle {
   display: flex;
   flex-direction: row;
